# ernos-labs-sft-platform

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONSTITUTION.md  CONTRIBUTING.md  LANGUAGE_POLICY.md  LICENSE  LICENSE_PENDING.md  LICENSING.md  NOTICE.md  README.md  ROADMAP.md  TRADEMARK_POLICY.md  pyproject.toml
census/: README.md  branches.json  claims.json  execution_manifest.json
claims/: README.md
correspondence/: README.md
docs/: CLAIM_LIFECYCLE.md  CLEAN_ROOM_PROTOCOL.md  COMPUTATION_BRANCH.md  DIRECTORY_MAP.md  EMPIRICAL_METHOD.md  ENGINE_AUTHORITY.md  ENGINE_STATUS.md  FORMAL_COMPUTATION_NEXT_BRANCH.md  INFORMATION_SCIENCE_BRANCH.md  MATHEMATICS_BRANCH.md  PHYSICS_BRANCH.md  PHYSICS_NEXT_BRANCH.md  PORTABILITY.md  QUANTUM_COMPUTATION_BRANCH.md  V4_SELF_HOSTED_REBUILD.md  VERIFICATION.md
experiments/: README.md
frontier/: README.md  computation.md  foundation.md  information_science.md  mathematics.md  quantum_computation.md
governance/: ERNOS_LABS.md  claim.schema.json  engine_policy.json  engine_receipt.schema.json  execution_manifest.schema.json  experiment.schema.json  fold_program.schema.json
prior-work-ledger/: README.md  manifest.json
publication/: computation_github_metadata.json  computation_release.json  computation_zenodo_metadata.json  foundation_publication_receipt.json  foundation_release_manifest.json  foundation_zenodo_metadata.json  information_science_github_metadata.json  information_science_release.json  information_science_zenodo_metadata.json  mathematics_release.json  mathematics_zenodo_metadata.json  (+8 more)
sft/: cli.py  (+4 more)
(+3883 files in other folders)
