[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "smithian-fold-theory-of-everything"
version = "0.1.0a0"
description = "Accessible Python host for the third clean-room Smithian Fold Theory reconstruction"
readme = "README.md"
authors = [
  {name = "Maria Smith", email = "Maria.Smith.Sftoe@gmail.com"}
]
dependencies = []

[project.scripts]
sft = "sft.cli:main"

[tool.setuptools.packages.find]
include = ["sft*"]
