[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ernos-labs-sft-platform"
version = "0.1.0"
description = "Open verification platform and knowledge tree for the third clean-room Smithian Fold Theory reconstruction"
readme = "README.md"
authors = [
  {name = "Maria Smith", email = "Maria.Smith.Sftoe@gmail.com"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MettaMazza/ernos-labs-sft-platform"
Repository = "https://github.com/MettaMazza/ernos-labs-sft-platform"
Documentation = "https://github.com/MettaMazza/ernos-labs-sft-platform#readme"

[project.scripts]
sft = "sft.cli:main"

[tool.setuptools.packages.find]
include = ["sft*"]
